k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-backend
  namespace: library
  labels: { app: library-backend }
spec:
  replicas: 1
  selector:
    matchLabels: { app: library-backend }
  template:
    metadata:
      labels: { app: library-backend }
    spec:
      containers:
        - name: backend
          image: library-backend:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: library-backend
  namespace: library
  labels: { app: library-backend }
spec:
  selector: { app: library-backend }
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
