k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: library
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: library.localtest.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: library-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-frontend
                port:
                  number: 80
